--- a/site/src/styles.css
+++ b/site/src/styles.css
@@ -20,6 +20,9 @@
 button {
   @apply dark:bg-black/20 bg-black/10 px-5 h-12 rounded-lg text-nowrap outline-1 outline-transparent hover:outline-sky-500 ease-in-out duration-200 cursor-pointer;
 }
+code {
+  @apply bg-black/10 dark:bg-black/20 text-sm rounded-md px-1 py-0.5 font-mono;
+}
 
 hr {
   @apply border-black/5 dark:border-white/5 border-[1px] w-full;
@@ -31,4 +34,14 @@ input[type="password"],
 input[type="number"],
 input[type="search"] {
   @apply w-full h-12 rounded-lg px-4 text-sm bg-black/10 dark:bg-black/20 outline-none border-none;
+}
+h1 {
+  @apply text-3xl font-bold dark:text-white leading-[80%];
+}
+h4 {
+  @apply text-lg font-semibold dark:text-white leading-[80%];
+}
+
+p {
+  @apply text-base dark:text-white leading-[128%];
 }
