--- a/site/src/styles.css
+++ b/site/src/styles.css
@@ -1,4 +1,22 @@
 @import "tailwindcss";
+/* @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *)); */
+@theme {
+  /* site colors */
+  --color-comet-50: #f6f7f9;
+  --color-comet-100: #ecedf2;
+  --color-comet-200: #d5d8e2;
+  --color-comet-300: #b0b6c9;
+  --color-comet-400: #858fab;
+  --color-comet-500: #667291;
+  --color-comet-600: #535c7a;
+  --color-comet-700: #434961;
+  --color-comet-800: #3a4052;
+  --color-comet-900: #333747;
+  --color-comet-950: #22242f;
+  /* mark colors */
+  --color-accent: #a3a4e7;
+  --color-primary: #a57ec7;
+}
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -6,7 +24,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,18 +31,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 :root {
-  @apply bg-zinc-200 dark:bg-zinc-800 text-black dark:text-white;
+  @apply bg-comet-600 text-white;
 }
 
 button {
-  @apply dark:bg-black/20 bg-black/10 px-5 h-12 rounded-lg text-nowrap outline-1 outline-transparent hover:outline-sky-500 ease-in-out duration-200 cursor-pointer;
+  @apply bg-comet-500 px-5 h-12 rounded-lg text-nowrap outline-1 outline-transparent hover:outline-primary ease-in-out duration-200 cursor-pointer;
 }
 code {
-  @apply bg-black/10 dark:bg-black/20 text-sm rounded-md px-1 py-0.5 font-mono;
+  @apply bg-comet-500 text-sm rounded-md px-1 py-0.5 font-mono;
 }
 
 hr {
-  @apply border-black/5 dark:border-white/5 border-[1px] w-full;
+  @apply border-black/5 border-[1px] w-full;
 }
 
 input[type="text"],
@@ -33,15 +50,15 @@ input[type="email"],
 input[type="password"],
 input[type="number"],
 input[type="search"] {
-  @apply w-full h-12 rounded-lg px-4 text-sm bg-black/10 dark:bg-black/20 outline-none border-none;
+  @apply w-full h-12 rounded-lg px-4 text-sm bg-comet-500 outline-none border-none;
 }
 h1 {
-  @apply text-3xl font-bold dark:text-white leading-[80%];
+  @apply text-3xl font-bold leading-[80%];
 }
 h4 {
-  @apply text-lg font-semibold dark:text-white leading-[80%];
+  @apply text-lg font-semibold leading-[80%];
 }
 
 p {
-  @apply text-base dark:text-white leading-[128%];
+  @apply text-base leading-[128%];
 }
